# ed25519_okc

./: Cargo.toml  README.md  cbindgen.toml  gen_header.sh  test.c
src/: lib.rs
