[package]
name = "ed25519_okc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ed25519-dalek = "1.0.1"
rand = "0.7.0"

[dependencies.ed25519-dalek]
version = "1.0.1"
features = ["legacy_compatibility"]

[build-dependencies]
cbindgen = "0.23.0"

[lib]
name = "ed25519_okc"
crate-type = ["dylib"]
